{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 150,
  "lineage": "1bbfe913-c144-3e75-09a8-9b6d4a80f9d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09772d8fb4cd092d7",
            "arn": "arn:aws:ec2:eu-west-1:155261241825:instance/i-05616b8258988466f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05616b8258988466f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-076074163832a78c2",
            "private_dns": "ip-10-0-1-25.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.25",
            "public_dns": "ec2-18-203-81-154.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.203.81.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cd7ef224d3c0d28a",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0490a2e273814abc3",
            "tags": {
              "ManagedBy": "Gemini",
              "Name": "bastion-host",
              "Project": "K3s-Cluster-Task",
              "Role": "bastion",
              "Terraform": "true"
            },
            "tags_all": {
              "ManagedBy": "Gemini",
              "Name": "bastion-host",
              "Project": "K3s-Cluster-Task",
              "Role": "bastion",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-081ab48ec5124e9d8"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023_arm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k3s_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09772d8fb4cd092d7",
            "arn": "arn:aws:ec2:eu-west-1:155261241825:instance/i-01b1bfad5dba07fdc",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b1bfad5dba07fdc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06d3f31a240411b43",
            "private_dns": "ip-10-0-102-24.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.102.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0779734f35d47513c",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b9d11a27868da12",
            "tags": {
              "ManagedBy": "Gemini",
              "Name": "k3s-agent",
              "Project": "K3s-Cluster-Task",
              "Role": "k3s-agent",
              "Terraform": "true"
            },
            "tags_all": {
              "ManagedBy": "Gemini",
              "Name": "k3s-agent",
              "Project": "K3s-Cluster-Task",
              "Role": "k3s-agent",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0539180c6a8425a99"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.k3s_server",
            "aws_security_group.bastion",
            "aws_security_group.k3s_agent",
            "aws_security_group.k3s_server",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023_arm",
            "random_password.k3s_cluster_token"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k3s_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09772d8fb4cd092d7",
            "arn": "arn:aws:ec2:eu-west-1:155261241825:instance/i-0d25634c8d929e91a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d25634c8d929e91a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-033c15c841c1de150",
            "private_dns": "ip-10-0-101-215.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ec3cd2bcf8cd59db",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-062366b9419b625d5",
            "tags": {
              "ManagedBy": "Gemini",
              "Name": "k3s-server",
              "Project": "K3s-Cluster-Task",
              "Role": "k3s-server",
              "Terraform": "true"
            },
            "tags_all": {
              "ManagedBy": "Gemini",
              "Name": "k3s-server",
              "Project": "K3s-Cluster-Task",
              "Role": "k3s-server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085351bab0674ee91"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.k3s_server",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023_arm",
            "random_password.k3s_cluster_token"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09772d8fb4cd092d7",
            "arn": "arn:aws:ec2:eu-west-1:155261241825:instance/i-0043aa8f41553b7fe",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0043aa8f41553b7fe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fbc78ca749142b93",
            "private_dns": "ip-10-0-1-20.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-34-242-234-249.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.242.234.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ebe0e92baefd9697",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0490a2e273814abc3",
            "tags": {
              "ManagedBy": "Gemini",
              "Name": "nat-instance",
              "Project": "K3s-Cluster-Task",
              "Role": "nat",
              "Terraform": "true"
            },
            "tags_all": {
              "ManagedBy": "Gemini",
              "Name": "nat-instance",
              "Project": "K3s-Cluster-Task",
              "Role": "nat",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00fb0f223531d983d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023_arm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:155261241825:internet-gateway/igw-0ba4127feb1021201",
            "id": "igw-0ba4127feb1021201",
            "owner_id": "155261241825",
            "tags": {
              "ManagedBy": "Gemini",
              "Name": "k3s-igw",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true"
            },
            "tags_all": {
              "ManagedBy": "Gemini",
              "Name": "k3s-igw",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d1bde2ac51a22734"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:155261241825:route-table/rtb-02f21b809fde15a94",
            "id": "rtb-02f21b809fde15a94",
            "owner_id": "155261241825",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0fbc78ca749142b93",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Gemini",
              "Name": "k3s-private-rt",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true"
            },
            "tags_all": {
              "ManagedBy": "Gemini",
              "Name": "k3s-private-rt",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1bde2ac51a22734"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.nat",
            "aws_security_group.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023_arm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:155261241825:route-table/rtb-025391f98b7d319cb",
            "id": "rtb-025391f98b7d319cb",
            "owner_id": "155261241825",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba4127feb1021201",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Gemini",
              "Name": "k3s-public-rt",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true"
            },
            "tags_all": {
              "ManagedBy": "Gemini",
              "Name": "k3s-public-rt",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1bde2ac51a22734"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1874b1ae7350d96",
            "route_table_id": "rtb-02f21b809fde15a94",
            "subnet_id": "subnet-062366b9419b625d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.nat",
            "aws_route_table.private",
            "aws_security_group.nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023_arm"
          ]
        },
        {
          "index_key": "private-subnet-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0744903d51692dc37",
            "route_table_id": "rtb-02f21b809fde15a94",
            "subnet_id": "subnet-09b9d11a27868da12"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.nat",
            "aws_route_table.private",
            "aws_security_group.nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023_arm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df72ee7073fd146d",
            "route_table_id": "rtb-025391f98b7d319cb",
            "subnet_id": "subnet-0490a2e273814abc3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public-subnet-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0036892be43469be7",
            "route_table_id": "rtb-025391f98b7d319cb",
            "subnet_id": "subnet-0530321a32a7f85bd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:155261241825:security-group/sg-081ab48ec5124e9d8",
            "description": "Allow SSH from user IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081ab48ec5124e9d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "37.215.38.6/32"
                ],
                "description": "Allow NodePort range from my IP",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "37.215.38.6/32"
                ],
                "description": "Allow SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "155261241825",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Gemini",
              "Name": "bastion-sg",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true"
            },
            "tags_all": {
              "ManagedBy": "Gemini",
              "Name": "bastion-sg",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1bde2ac51a22734"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:155261241825:security-group/sg-0539180c6a8425a99",
            "description": "Security group for K3s Agent node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0539180c6a8425a99",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-081ab48ec5124e9d8"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "k3s-agent-sg",
            "name_prefix": "",
            "owner_id": "155261241825",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Gemini",
              "Name": "k3s-agent-sg",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true"
            },
            "tags_all": {
              "ManagedBy": "Gemini",
              "Name": "k3s-agent-sg",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1bde2ac51a22734"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:155261241825:security-group/sg-085351bab0674ee91",
            "description": "Security group for K3s Server node",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085351bab0674ee91",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-081ab48ec5124e9d8"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": null,
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-081ab48ec5124e9d8"
                ],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "k3s-server-sg",
            "name_prefix": "",
            "owner_id": "155261241825",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Gemini",
              "Name": "k3s-server-sg",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true"
            },
            "tags_all": {
              "ManagedBy": "Gemini",
              "Name": "k3s-server-sg",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1bde2ac51a22734"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:155261241825:security-group/sg-00fb0f223531d983d",
            "description": "Allow traffic from private subnets for NAT",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00fb0f223531d983d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.101.0/24",
                  "10.0.102.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.101.0/24",
                  "10.0.102.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nat-instance-sg",
            "name_prefix": "",
            "owner_id": "155261241825",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Gemini",
              "Name": "nat-instance-sg",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true"
            },
            "tags_all": {
              "ManagedBy": "Gemini",
              "Name": "nat-instance-sg",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1bde2ac51a22734"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "agent_flannel_from_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Flannel from server to agent",
            "from_port": 8472,
            "id": "sgrule-343495979",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0539180c6a8425a99",
            "security_group_rule_id": "sgr-06daf09d3d575dff5",
            "self": false,
            "source_security_group_id": "sg-085351bab0674ee91",
            "timeouts": null,
            "to_port": 8472,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.k3s_agent",
            "aws_security_group.k3s_server",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "server_api_from_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow K3s agents to access API server",
            "from_port": 6443,
            "id": "sgrule-269732777",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-085351bab0674ee91",
            "security_group_rule_id": "sgr-0faae5e8a80ca1c91",
            "self": false,
            "source_security_group_id": "sg-0539180c6a8425a99",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.k3s_agent",
            "aws_security_group.k3s_server",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "server_flannel_from_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Flannel from agent to server",
            "from_port": 8472,
            "id": "sgrule-1204968382",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-085351bab0674ee91",
            "security_group_rule_id": "sgr-00174110e09812738",
            "self": false,
            "source_security_group_id": "sg-0539180c6a8425a99",
            "timeouts": null,
            "to_port": 8472,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.k3s_agent",
            "aws_security_group.k3s_server",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "server_kubelet_from_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow K3s agents to access server Kubelet",
            "from_port": 10250,
            "id": "sgrule-691167058",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-085351bab0674ee91",
            "security_group_rule_id": "sgr-03ccc9a10ea460b56",
            "self": false,
            "source_security_group_id": "sg-0539180c6a8425a99",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.k3s_agent",
            "aws_security_group.k3s_server",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:155261241825:subnet/subnet-062366b9419b625d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062366b9419b625d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155261241825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Gemini",
              "Name": "private-subnet-1",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "ManagedBy": "Gemini",
              "Name": "private-subnet-1",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d1bde2ac51a22734"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "private-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:155261241825:subnet/subnet-09b9d11a27868da12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b9d11a27868da12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "155261241825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Gemini",
              "Name": "private-subnet-2",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true",
              "Tier": "private"
            },
            "tags_all": {
              "ManagedBy": "Gemini",
              "Name": "private-subnet-2",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true",
              "Tier": "private"
            },
            "vpc_id": "vpc-0d1bde2ac51a22734"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:155261241825:subnet/subnet-0490a2e273814abc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0490a2e273814abc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "155261241825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Gemini",
              "Name": "public-subnet-1",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true",
              "Tier": "public"
            },
            "tags_all": {
              "ManagedBy": "Gemini",
              "Name": "public-subnet-1",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d1bde2ac51a22734"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:155261241825:subnet/subnet-0530321a32a7f85bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0530321a32a7f85bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "155261241825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "Gemini",
              "Name": "public-subnet-2",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true",
              "Tier": "public"
            },
            "tags_all": {
              "ManagedBy": "Gemini",
              "Name": "public-subnet-2",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true",
              "Tier": "public"
            },
            "vpc_id": "vpc-0d1bde2ac51a22734"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:155261241825:vpc/vpc-0d1bde2ac51a22734",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09bb2585d39d5f165",
            "default_route_table_id": "rtb-083401510caad29a9",
            "default_security_group_id": "sg-0381060583a759b9b",
            "dhcp_options_id": "dopt-0a34f44d86821a65d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d1bde2ac51a22734",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-083401510caad29a9",
            "owner_id": "155261241825",
            "tags": {
              "ManagedBy": "Gemini",
              "Name": "k3s-vpc",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true"
            },
            "tags_all": {
              "ManagedBy": "Gemini",
              "Name": "k3s-vpc",
              "Project": "K3s-Cluster-Task",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}